//
// Copyright 2023 DXOS.org
//

syntax = "proto3";

package dxos.schema;

/**
 * Expando schema definition.
 */
// TODO(burdon): Use with Table, Kanban, etc.
message Schema {
  option (object) = true;

  enum PropType {
    NONE = 0;
    STRING = 1; // TODO(burdon): vs TEXT?
    NUMBER = 2;
    BOOLEAN = 3;
    DATE = 4;
    REF = 5; // TODO(burdon): Add RICH text separately?
    RECORD = 6;
    ENUM = 7;
  }

  message EnumVariant {
    int32 tag = 1;
    string name = 2;
  }

  message Prop {
    string id = 1; // TODO(burdon): Rename key.
    PropType type = 2;

    /// Human readable name.
    /// TODO(burdon): Rename?
    optional string typename = 7;

    /// Referenced object's FQN.
    optional string ref_name = 6;

    /// Referenced object's schema.
    optional Schema ref = 3;

    /// Model of the referenced object.
    optional string ref_model_type = 4;

    /// Is the property an array of repread values.
    optional bool repeated = 5;

    // Only for RECORD types.
    repeated Prop props = 8;

    // Only for ENUM types.
    repeated EnumVariant variants = 9;

    int32 digits = 10;
  }

  // FQ type name (e.g., dxos.org/type/Document
  string typename = 1;
  repeated Prop props = 2;
}
