//
// Copyright 2022 DXOS.org
//

syntax = "proto3";

import "dxos/schema.proto";

package example.test;

message Contact {
  option (object) = true;

  message Address {
    message LatLng {
      fixed32 lat = 1;
      fixed32 lng = 2;
    }

    string city = 1;
    string state = 2;
    string zip = 3;
    LatLng coordinates = 4;
  }

  string name = 1 [default="Anonymous", required = true];
  string username = 2;
  string email = 3;
  Address address = 4;
  repeated Task tasks = 5;
  LatLng current_location = 6;
}

message Task {
  option (object) = true;

  message Todo {
    option (object) = true;

    string name = 1;
  }

  string title = 1;
  bool completed = 2;
  Contact assignee = 3;
  Task previous = 4;
  repeated Task sub_tasks = 5;
  dxos.schema.Text description = 6;
  repeated Todo todos = 7;
}

message Container {
  option (object) = true;

  message Record {
    enum Type {
      UNDEFINED = 0;
      PERSONAL = 1;
      WORK = 2;
    }

    string title = 1;
    string description = 2;
    repeated Contact contacts = 3;
    Type type = 4;
  }

  repeated dxos.schema.TypedObject objects = 1;
  repeated dxos.schema.Expando expandos = 2;
  repeated Record records = 3;
}
